trunk/Archive2/e6/1efc069f27dc35/output
main.cpp:10:28: error: call to non-static member function without an object argument
    std::cout << typeid(B::f).name() << '\n';
                        ~~~^
1 error generated.
